# singletonum-rs

./: Cargo.toml  Cargo.toml.bak  LICENSE  README.md
singleton/: Cargo.toml
singleton-derive/: Cargo.toml
singleton-derive/src/: lib.rs
singleton/src/: lib.rs
singletonum/: Cargo.toml
singletonum-derive/: Cargo.toml
singletonum-derive/src/: lib.rs
singletonum/src/: lib.rs
testcrate/: Cargo.toml
testcrate/src/: main.rs
