[package]
name = "singletonum-derive"
version = "0.1.0"
authors = ["Mike Lubinets <lubinetsm@yandex.ru>"]
license = "MIT"
repository = "https://github.com/mersinvald/singleton-rs"
description = "singleton derive macro (this is an internal crate, you don't need to connect it explicitly)"

[lib]
doctest = false
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = "0.11"
quote = "0.3"
failure = "0.1.2"
heck = "0.3.0"
